# NoSQL-database

./: README.md
task3/: CMakeLists.txt  Doxyfile
task3/html/: annotated.html  classJsonMethods-members.html  classJsonMethods.html  classLiterature-members.html  classLiterature.html  classes.html  dir_000003_000002.html  dir_000005_000004.html  dir_02b3b004a85a67435166fd4dc1025906.html  dir_39d8340d1971bd223b75c7fa3d95ca4c.html  dir_39d8340d1971bd223b75c7fa3d95ca4c_dep.dot  dir_e0fe4798e3c9a83969e4a92241311de2.html  dir_e0fe4798e3c9a83969e4a92241311de2_dep.dot  dir_f1e0d02cbfa44966fa84e9e47747cf04.html  dir_f1e0d02cbfa44966fa84e9e47747cf04_dep.dot  dir_f36c06d50c6aa65bb1ef551029ae71dc.html  dir_f36c06d50c6aa65bb1ef551029ae71dc_dep.dot  dir_f7eea26883943d24f03919f2a3c0c2b8.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  task3__client_8h.html  task3__client_8h__incl.dot  task3__client_8h_source.html  task3__server_8h.html  task3__server_8h__incl.dot  task3__server_8h_source.html
task3/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
task3/task3_client/: CMakeLists.txt
task3/task3_client/inc/: task3_client.h
task3/task3_client/src/: main_client.cpp  task3_client.cpp
task3/task3_server/: CMakeLists.txt
task3/task3_server/inc/: task3_server.h
task3/task3_server/src/: main_server.cpp  (+1 more)
(+13 files in other folders)
